added html and css for small devices

--- a/index.html
+++ b/index.html
@@ -4,11 +4,82 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Title</title>
+    <link
+      rel="shortcut icon"
+      href="images/favicon-32x32.png"
+      type="image/x-icon"
+    />
+    <title>Splitter Tip Calculator</title>
     <link rel="stylesheet" href="style.css" />
     <script src="app.js" defer></script>
   </head>
   <body>
-    <h1></h1>
+    <h1 class="title">SPLI<br />TTER</h1>
+    <div class="calculator-container">
+      <div class="caculator-content">
+        <!-- Bill Input -->
+        <div class="bill">
+          <h2 class="bill-title">Bill</h2>
+          <div class="bill-input-container">
+            <input type="text" placeholder="0" class="bill-input" />
+            <img
+              src="images/icon-dollar.svg"
+              alt="US dollar sign"
+              class="dollar-icon"
+            />
+          </div>
+        </div>
+        <!-- Select Tip -->
+        <div class="select-tip">
+          <h2 class="select-tip-title">Select Tip %</h2>
+          <div class="selected-tips">
+            <div class="tip" id="0">5%</div>
+            <div class="tip" id="1">10%</div>
+            <div class="tip" id="2">15%</div>
+            <div class="tip" id="3">25%</div>
+            <div class="tip" id="4">50%</div>
+            <input
+              type="text"
+              placeholder="Custom"
+              class="tip custom-tip"
+              id="5"
+            />
+          </div>
+        </div>
+        <!-- Number of People Input -->
+        <div class="num-of-people">
+          <h2 class="num-of-people-title">Number of people</h2>
+          <div class="num-of-people-input-container">
+            <input type="text" placeholder="0" class="people-input" />
+            <img
+              src="images/icon-person.svg"
+              alt="US dollar sign"
+              class="dollar-icon"
+            />
+          </div>
+        </div>
+        <!-- Tip Calculations -->
+        <div class="tip-caculations">
+          <!-- Tip amount per person -->
+          <div class="tip-calculations-container">
+            <div class="tip-amount-text tip-calculations-text">
+              Tip Amount
+              <span>/ person</span>
+            </div>
+            <div class="tip-amount">$4.27</div>
+          </div>
+          <!-- Total amount per person -->
+          <div class="tip-calculations-container">
+            <div class="person-tip-total tip-calculations-text">
+              Total
+              <span>/ person</span>
+            </div>
+            <div class="tip-amount">$32.79</div>
+          </div>
+          <!-- Reset Btn -->
+          <button class="reset-btn">RESET</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
