added javaScript for challenge example calculation

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 alt="US dollar sign"
                 class="dollar-icon"
               />
+              <p class="empty-bill"></p>
             </div>
           </div>
           <!-- Select Tip -->
@@ -57,6 +58,7 @@
                 alt="US dollar sign"
                 class="dollar-icon"
               />
+              <p class="empty-people"></p>
             </div>
           </div>
         </div>
@@ -68,7 +70,7 @@
               Tip Amount
               <span>/ person</span>
             </div>
-            <div class="tip-amount tip-amount-person">$4.27</div>
+            <div class="tip-amount tip-amount-person">$00.00</div>
           </div>
           <!-- Total amount per person -->
           <div class="tip-calculations-container">
@@ -76,7 +78,7 @@
               Total
               <span>/ person</span>
             </div>
-            <div class="tip-amount total-amount-person">$32.79</div>
+            <div class="tip-amount total-amount-person">$00.00</div>
           </div>
           <!-- Reset Btn -->
           <button class="reset-btn">RESET</button>
