added JavaScript for custom tip amount

--- a/index.html
+++ b/index.html
@@ -40,12 +40,15 @@
               <div class="tip" id="2">15%</div>
               <div class="tip" id="3">25%</div>
               <div class="tip" id="4">50%</div>
-              <input
-                type="text"
-                placeholder="Custom"
-                class="tip custom-tip"
-                id="5"
-              />
+              <div class="custom-tip-container">
+                <input
+                  type="text"
+                  placeholder="Custom"
+                  class="tip custom-tip"
+                  id="5"
+                />
+                <p class="empty-custom-tip"></p>
+              </div>
             </div>
           </div>
           <!-- Number of People Input -->
